--- a/app/institutions/dashboard/-components/institutional-users-list/styles.scss
+++ b/app/institutions/dashboard/-components/institutional-users-list/styles.scss
@@ -132,7 +132,7 @@
 .dropdown-panel {
     position: absolute;
     top: calc(100% + 5px);
-    right: 0;
+    right: 45%;
     background-color: $color-bg-white;
     border: 1px solid $color-border-gray;
     border-radius: 4px;
